--- a/projeto-social.html
+++ b/projeto-social.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>projeto redes sociais</title>
-    <link rel="stylesheet" href="projeto-redes-sociais.css">
+    <link rel="stylesheet" href="estilo/projeto-redes-sociais.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
-    
+    <header></header>
+    <main>
+        <section id="telefone">
+            <iframe src="home.html" name="tela" frameborder="0" id="tela"></iframe>
+        </section>
+        <section id="redes-sociais">
+            <a href="home.html" target="tela"> <img src="imagens/logo-home.jpg" alt="tela"> </a>
+            <a href="#" target="tela"> <img src="imagens/logo-youtube.jpg" alt="tela"></a>
+            <a href="#" target="tela"> <img src="imagens/logo-github.jpg" alt="tela"></a>
+            <a href="#" target="tela"> <img src="imagens/logo-instagram.jpg" alt="tela"></a>
+            <a href="#" target="tela"> <img src="imagens/logo-twitter.jpg" alt="tela"></a>
+            <a href="#" target="tela"> <img src="imagens/logo-facebook.jpg" alt="tela"></a>
+        </section>
+    </main>
+    <footer></footer>
 </body>
 </html>
